k8s/security/disallow-privileged.yaml
# OPA Gatekeeper: block privileged containers.
# A privileged container has full host kernel capabilities and can escape
# the container namespace to compromise the underlying node.
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: disallowprivileged
spec:
  crd:
    spec:
      names:
        kind: DisallowPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package disallowprivileged
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Container '%v' must not run as privileged", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.privileged == true
          msg := sprintf("Init container '%v' must not run as privileged", [container.name])
        }
